# CPP-open

./: README.md  SingleLinkedList.cpp  search_server_simple_ver.cpp
SearchServer/: CMakeLists.txt  README.md  document.cpp  document.h  log_duration.h  main.cpp  paginator.h  read_input_functions.cpp  read_input_functions.h  remove_duplicates.cpp  remove_duplicates.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  test_example_functions.cpp  test_example_functions.h  unit.h
Simple Code/: README.md  cache.cpp  check_tree.cpp  make_unique.cpp  octopus.cpp  tree_node.cpp
Simple Code/ASYNC_MERG/: log_duration.h  main_async_merge.cpp
Simple Code/EXECUTION_POLICY/: main_execution_policy.cpp
Simple Code/INI/: ini.cpp  ini.h  main_ini.cpp
Simple Code/OBSERVER/: main_observer.cpp  people.h  simulation.cpp  supervisor.h
Simple Code/SVG/: main_svg.cpp
Simple Vector/: array_ptr.h  main.cpp  simple_vector.h
Transport catalogue/: README.md  geo.h  input.json  input_reader.cpp  input_reader.h  json.cpp  json.h  json_reader.cpp  json_reader.h  main.cpp  main_json.cpp  output.json  stat_reader.cpp  stat_reader.h  svg.cpp  svg.h  test_data.txt  transport_catalogue.cpp  transport_catalogue.h
